change title and main image

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Happy Birthday Yavu</title>
+    <title>Happy Birthday Arush #CR Forever</title>
     <meta name="description" content="Happy Birthday Yavu" />
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
     <script src="https://unpkg.com/aframe-extras.animation-mixer@3.4.0/dist/aframe-extras.animation-mixer.js"></script>
@@ -152,7 +152,7 @@
         geometry="depth: 30; height: 0.1; width: 6"
         repeat="1 5"
       ></a-box>
-      <a-entity id="tv-parent" position="0 0 0"> </a-entity>
+      <a-entity id="tv-parent" position="0 0 0"></a-entity>
       <a-entity
         position="-1.31203 0.98043 -4.23718"
         obj-model="mtl: ./asset/gift/gift2.mtl; obj: ./asset/gift/gift2.obj"
