add text to carpet

--- a/index.html
+++ b/index.html
@@ -231,6 +231,18 @@
         sound="loop: true; volume: 30"
       ></a-sound>
       #}
+      <a-entity
+        text="font: mozillavr; value: Ye raasta sahi hai bhi; align: center; width: 2"
+        scale="16 16 10"
+        rotation="270 90 0"
+        position="-2.424 0.125 6.308"
+      ></a-entity>
+      <a-entity
+        text="font: https://cdn.aframe.io/fonts/mozillavr.fnt; value: Aur nahi bhi!; width: 2"
+        rotation="270 270 0"
+        position="2.3401 0.04638 18.89447"
+        scale="16 16 10"
+      ></a-entity>
     </a-scene>
     <script src="./flame.js"></script>
   </body>
