--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
         ></a-asset-item>
         <video class="myvideos" id="video1" src="./vid/vid1.mp4"></video>
         <video class="myvideos" id="video2" src="./vid/vid2.mp4"></video>
-        <video class="myvideos" id="video3" src="./vid/vid3.mp4"></video>
-        <video class="myvideos" id="video4" src="./vid/vid4.mp4"></video>
-        <video class="myvideos" id="video5" src="./vid/vid5.mp4"></video>
-        <video class="myvideos" id="video6" src="./vid/vid6.mp4"></video>
+        <video class="myvideos" id="video3" src="./vid/vid3.3gp"></video>
+        <video class="myvideos" id="video4" src="./vid/vid4.3gp"></video>
+        <video class="myvideos" id="video5" src="./vid/vid5.3gp"></video>
+        <video class="myvideos" id="video6" src="./vid/vid6.3gp"></video>
       </a-assets>
       <a-entity position="0 1.65 20">
         <a-camera>
