changed assets for Prasubh's birthday

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Happy Birthday Arush #CR Forever</title>
-    <meta name="description" content="Happy Birthday Yavu" />
+    <title>Happy Birthday Prasubh</title>
+    <meta name="description" content="Happy Birthday Prashubh" />
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
     <script src="https://unpkg.com/aframe-extras.animation-mixer@3.4.0/dist/aframe-extras.animation-mixer.js"></script>
     <script src="https://unpkg.com/aframe-particle-system-component@1.0.x/dist/aframe-particle-system-component.min.js"></script>
@@ -59,10 +59,10 @@
         ></a-asset-item>
         <video class="myvideos" id="video1" src="./vid/vid1.mp4"></video>
         <video class="myvideos" id="video2" src="./vid/vid2.mp4"></video>
-        <video class="myvideos" id="video3" src="./vid/vid3.3gp"></video>
-        <video class="myvideos" id="video4" src="./vid/vid4.3gp"></video>
-        <video class="myvideos" id="video5" src="./vid/vid5.3gp"></video>
-        <video class="myvideos" id="video6" src="./vid/vid6.3gp"></video>
+        <video class="myvideos" id="video3" src="./vid/vid3.mp4"></video>
+        <video class="myvideos" id="video4" src="./vid/vid4.mp4"></video>
+        <video class="myvideos" id="video5" src="./vid/vid5.mp4"></video>
+        <video class="myvideos" id="video6" src="./vid/vid6.mp4"></video>
       </a-assets>
       <a-entity position="0 1.65 20">
         <a-camera>
@@ -222,26 +222,6 @@
       <a-entity
         position="0 2 -5.77156"
         sound="src: #hbd; autoplay: true; volume:30; loop:true"
-      ></a-entity>
-      {#
-      <a-sound
-        src="src: url(./asset/hbd.mp3)"
-        autoplay="true"
-        position="0 2 -5.77156"
-        sound="loop: true; volume: 30"
-      ></a-sound>
-      #}
-      <a-entity
-        text="font: mozillavr; value: Ye raasta sahi hai bhi; align: center; width: 2"
-        scale="16 16 10"
-        rotation="270 90 0"
-        position="-2.424 0.125 6.308"
-      ></a-entity>
-      <a-entity
-        text="font: https://cdn.aframe.io/fonts/mozillavr.fnt; value: Aur nahi bhi!; width: 2"
-        rotation="270 270 0"
-        position="2.3401 0.04638 18.89447"
-        scale="16 16 10"
       ></a-entity>
     </a-scene>
     <script src="./flame.js"></script>
